--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,8 @@
   padding-bottom: 15px;
   padding-right: 30px;
   padding-left: 30px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 40px;
 }
 
 .list {
@@ -74,6 +76,7 @@
     gap: 152px;
     padding-top: 25px;
     padding-bottom: 25px;
+    margin-bottom: 50px;
   }
 
   .list {
