--- a/src/components/TitleMenu/TitleMenu.module.css
+++ b/src/components/TitleMenu/TitleMenu.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 15px;
 }
 
 .title {
